--- a/career-map-io/src/index.css
+++ b/career-map-io/src/index.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.button-primary {
+    @apply py-3 px-5 bg-gradient-to-r from-indigo-400 to-violet-500 text-white text-lg rounded-lg font-semibold
+}
